--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -23,8 +23,7 @@
                 }
                 .about-intro {
                     p {
-
-                        // border: 2px solid red;
+                        font-size: $font-clamp-xsm;
                         // CAPITAL B FIRST LETTER
                         &.intro {
                             font-weight: 500;
