--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -132,9 +132,9 @@
                 transition: 1s;
                 // border: 2px solid red;
                 p {
-                    background-color: $overlay-blue-darkest;
+                    background-color: $overlay-blue-black;
                     color: $text-light;
-                    border: 1px solid $brand-border;
+                    // border: 1px solid $brand-border;
                     
                     padding-left: .25rem;
                     padding-block: .15rem;
