@use rule and scss structure setup

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -25,7 +25,7 @@ $border-radius-lg: 1rem;
 $border-radius-xlg: 50%;
 // SPAN AND BRAND
 
-$brand: hsl(209, 20%, 75%);
+$brand: #b3c0cc;
 $brand-border: hsla(210, 19%, 75%, .5);
 
 $span-crimson: #dc143c;
