--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,14 +1,15 @@
+@use '../abstracts';
 // HERO
 .banner {
     width: 100%;
     height: 95vh;
-    background: $overlay-blue-darker;
     position: relative;
     overflow: hidden;
     isolation: isolate;
-
+    
     // ABOUT PAGE BANNER
     &.about-banner {
+        background: abstracts.$overlay-blue-darker;
 
         // MOBILE HERO IMG
         @media (max-width: 1024px) {
@@ -28,25 +29,17 @@
                 background-size: contain;
                 background-position: right;
                 opacity: .6;
-                @include xsm {
+                @include abstracts.xsm {
                     background-size: 100%;
                     background-size: cover;
                     background-position: right;
                     background-position: 0% bottom;
                 }
-                @include sm {
-
-                }
-
-                // mix-blend-mode: overlay;
-                // opacity: .9;
-                // background: radial-gradient(transparent, #000);
             }
         }
 
         // DESKTOP HERO IMAGE
         @media (min-width: 1024px) {
-            // background: radial-gradient($overlay-blue-dark, #000);
             background-attachment: fixed;
             &::after {
                 position: absolute;
@@ -69,12 +62,13 @@
 }
 
 .hero {
-    color: $text-light;
+    // border: 5px solid red;
+    color: abstracts.$text-light;
     text-transform: capitalize;
     h1 {
         font-size: 1rem;
         font-size: clamp(1rem, 2.5vw, 1.25rem);
-        font-weight: 200;
+        font-weight: 900;
         margin-bottom: .5rem;
     }
     h2 {
@@ -84,42 +78,42 @@
     }
     p {
         font-size: 1rem;
-        font-size: $font-clamp-sm;
+        font-size: abstracts.$font-clamp-sm;
     }
     a {
         color: inherit;
     }
     span {
-        color: $brand;
+        color: abstracts.$brand;
     }
     // PAGE HERO CONTENT
     .hero-content {
-        // border: 1px solid #fff;
+        border: 1px solid #fff;
         background: transparent;
         padding: 5vh 5vw;
         position: relative;
         top: 5vh;
         width: 100%;
 
-        @include md {
+        @include abstracts.md {
             width: max-content;
             top: 10vh;
         }
 
-        @include xlg {
+        @include abstracts.xlg {
             top: 15vh;
         }
 
         // "AKA" SPAN
         .hero-meta-description {
-            color: $brand;
+            color: abstracts.$brand;
             margin-top: 1rem;
         }
     }
 
     // ANIMATED CTA
     .hero-cta {
-        background: $span-crimson;
+        background: abstracts.$span-crimson;
         margin: 20vh 0 0;
         position: relative;
         display: block;
@@ -132,10 +126,10 @@
         @media (max-width: 576px){
             margin: 20vh 0 0;
         }
-        @include sm {
+        @include abstracts.sm {
             margin: 20vh 0 0;
         }
-        @include lg {
+        @include abstracts.lg {
             margin: 15vh 0 0;
         }
         // PAGE CTA BTN SHADOWS
@@ -150,16 +144,16 @@
 
         // ::before = box shadow
         &::before {
-            box-shadow: $box-light-top-sm;
-            background: $button-crimson;
+            box-shadow: abstracts.$box-light-top-sm;
+            background: abstracts.$button-crimson;
         }
         &::after {
             opacity: 1;
             z-index: -1;
             animation: 1s cta-btn infinite;
             transition: .25s;
-            background: $button-crimson-hover;
-            box-shadow: $box-light-top-sm-hover;
+            background: abstracts.$button-crimson-hover;
+            box-shadow: abstracts.$box-light-top-sm-hover;
         }
 
         // ANIMATED BTN TEXT
@@ -167,9 +161,9 @@
             position: relative;
             display: inline-block;
             text-transform: none;
-            color: $text-light;
+            color: abstracts.$text-light;
             font-size: 2.5rem;
-            font-size: $font-clamp-lg;
+            font-size: abstracts.$font-clamp-lg;
             font-weight: 500;
             animation: animate 3s ease-in-out infinite;
             animation-delay: calc(1s + .2s * var(--i));
@@ -230,14 +224,14 @@
         position: relative;
         top: 10vh;
 
-        @include xlg {
+        @include abstracts.xlg {
             top: 20vh;
         }
 
         .content-title {
             margin-bottom: 25vh;
 
-            @include xlg {
+            @include abstracts.xlg {
                 margin-bottom: 5vh;
             }
         }
@@ -247,19 +241,19 @@
             .cta {
                 width: 12rem;
                 margin-top: 1rem;
-                @include lg {
+                @include abstracts.lg {
                     width: 14rem;
                 }
                 .btn {
                     width: 100%;
                     padding: 1rem;
                     font-size: 1rem;
-                    font-size: $font-clamp-sm;
+                    font-size: abstracts.$font-clamp-sm;
                     &::before {
-                        background: $button-crimson;
+                        background: abstracts.$button-crimson;
                     }
                     &::after {
-                        background: $button-crimson-hover;
+                        background: abstracts.$button-crimson-hover;
                     }
                 }
             }
@@ -271,7 +265,7 @@
         position: absolute;
         inset: 0;
         z-index: -1;
-        background: $overlay-blue-light;
+        background: abstracts.$overlay-blue-light;
         img {
             // border: 5px solid green;
             mix-blend-mode: overlay;
@@ -282,9 +276,9 @@
         }
 
 
-        @include xlg {
+        @include abstracts.xlg {
             // border: 4px solid yellow;
-            background: $overlay-blue-black;
+            background: abstracts.$overlay-blue-black;
             background: #000;
             img {
                 // border: 2px solid red;
