--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -1,6 +1,7 @@
-// footer
+@use '../abstracts';
+// FOOTER
 #footer {
-    background: $overlay-blue-darkest;
+    background: abstracts.$overlay-blue-darkest;
     padding: 0 0 5vh 0;
     .footer {
         min-height: 100vh;
@@ -20,13 +21,13 @@
 
             // SOCIAL MEDIA LINKS
             .socialMedia-links {
-                @include xlg {
+                @include abstracts.xlg {
                     width: 100%;
-                    border-radius: $border-radius-sm;
+                    border-radius: abstracts.$border-radius-sm;
                 }
 
                 grid-template-columns: 1fr;
-                background-color: $overlay-blue-dark;
+                background-color: abstracts.$overlay-blue-dark;
                 width: 100%;
                 padding: 10vh 5vw;
 
@@ -34,7 +35,7 @@
                     display: grid;
                     gap: 5vh;
 
-                    @include lg {
+                    @include abstracts.lg {
                         width: 100%;
                         grid-template-columns: 1fr 1fr;
                         gap: 1rem;
@@ -52,19 +53,19 @@
                         right: 1rem;
                         top: 1rem;
                         font-size: 4rem;
-                        color: $brand;
+                        color: abstracts.$brand;
                         opacity: .1;
                         transition: .25s;
 
-                        @include md {
+                        @include abstracts.md {
                             right: 45vw;
                         }
 
-                        @include lg {
+                        @include abstracts.lg {
                             right: 4vw;
                         }
 
-                        @include xlg {
+                        @include abstracts.xlg {
                             right: 10vw;
                         }
                     }
@@ -73,16 +74,16 @@
                         font-size: 1.25rem;
                         margin-bottom: .5rem;
                         text-transform: capitalize;
-                        color: $text-light;
+                        color: abstracts.$text-light;
                         font-weight: 400;
-                        font-family: $font-title;
+                        font-family: abstracts.$font-title;
                     }
 
                     a {
-                        background: $overlay-blue-dark;
+                        background: abstracts.$overlay-blue-dark;
                         padding: .7rem;
                         width: 13rem;
-                        color: $text-light;
+                        color: abstracts.$text-light;
                         text-transform: capitalize;
                         border-radius: .5rem;
                         position: relative;
@@ -90,7 +91,7 @@
                         transition: .25s ease;
                         display: flex;
                         align-items: center;
-                        @include xsm {
+                        @include abstracts.xsm {
                             cursor: default;
                         }
                         @media (min-width: 768px) {
@@ -125,12 +126,12 @@
                         }
 
                         &::before {
-                            box-shadow: $box-light-top-sm;
+                            box-shadow: abstracts.$box-light-top-sm;
                         }
 
                         &::after {
                             opacity: 0;
-                            box-shadow: $box-light-top-sm-hover;
+                            box-shadow: abstracts.$box-light-top-sm-hover;
                         }
 
                         // end of link box shadow
@@ -266,7 +267,7 @@
                     // ITEM HOVER STATE
                     &:hover {
                         p {
-                            color: $text-light;
+                            color: abstracts.$text-light;
                             transition: .5s;
                             transition-delay: .05s;
                         }
@@ -317,7 +318,7 @@
             display: flex;
             flex-direction: column;
             gap: 5vh;
-            @include xlg {
+            @include abstracts.xlg {
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
@@ -327,8 +328,8 @@
             }
             img {
                 width: 12rem;
-                border-radius: $border-radius-sm;
-                @include lg {
+                border-radius: abstracts.$border-radius-sm;
+                @include abstracts.lg {
                     width: 15rem;
                     padding-top: 0;
                 }
@@ -341,11 +342,11 @@
                     margin-bottom: 1rem;
                 }
                 .date {
-                    color: $brand;
+                    color: abstracts.$brand;
                 }
 
                 p {
-                    color: $text-light;
+                    color: abstracts.$text-light;
                     text-transform: capitalize;
                     line-height: 1.6;
                 }
@@ -355,20 +356,20 @@
                         margin-bottom: .5rem;
                         i {
                             width: 1.5rem;
-                            color: $brand;
+                            color: abstracts.$brand;
                             transition: .25s;
                         }
                         a {
-                            color: $text-light;
+                            color: abstracts.$text-light;
                             transition: .25s;
                         }
                         
                         &:hover {
                             a {
-                                color: $brand;
+                                color: abstracts.$brand;
                             }
                             i {
-                                color: $text-light;
+                                color: abstracts.$text-light;
                                 transform: translateX(.25rem);
                             }
                         }
