--- a/sass/pages/_skills.scss
+++ b/sass/pages/_skills.scss
@@ -1,3 +1,4 @@
+@use '../abstracts';
 // SKILLS SECTION
 .skills-section {
     // border: 3px solid red;
@@ -11,7 +12,7 @@
     // skills container
     .skills-content {
         // border: 2px solid blue;
-        @include lg {
+        @include abstracts.lg {
             background: url('../img/keyboard-mouse.jpg');
             background-repeat: no-repeat;
             background-position: right;
@@ -24,22 +25,22 @@
             padding: 0 2.5vw 5vh 5vw;
             position: relative;
 
-            @include sm {
+            @include abstracts.sm {
                 padding: 0vh 5vw 5vh;
             }
 
             .skills-article {
                 p {
-                    font-size: $font-clamp-xsm;
+                    font-size: abstracts.$font-clamp-xsm;
 
                     span {
                         font-weight: 600;
                         color: inherit;
                     }
-                    @include lg {
+                    @include abstracts.lg {
                         max-width: 350px;
                     }
-                    @include xlg {
+                    @include abstracts.xlg {
                         max-width: 450px;
                     }
 
@@ -47,14 +48,14 @@
             }
 
             .skills-icons {
-                // border: 1px solid $overlay-blue-dark;
+                // border: 1px solid abstracts.$overlay-blue-dark;
                 display: flex;
                 align-items: center;
                 justify-content: space-around;
                 margin: 0 auto 1rem;
-                border-radius: $border-radius-sm;
+                border-radius: abstracts.$border-radius-sm;
 
-                @include md {
+                @include abstracts.md {
                     justify-content: flex-start;
                     gap: 5vw;
                 }
@@ -62,7 +63,7 @@
                 svg {
                     height: 5rem;
                     width: auto;
-                    fill: $overlay-blue-darker;
+                    fill: abstracts.$overlay-blue-darker;
                     transition: .25s;
                     filter: drop-shadow(.25rem .25rem .25rem hsla(212, 19%, 20%, .25));
 
@@ -104,23 +105,23 @@
     // margin-top: 10vh;
     position: relative;
 
-    @include md {
+    @include abstracts.md {
         margin-top: 10vh;
     }
 
     &.border {
-        border: .125rem solid $brand;
+        border: .125rem solid abstracts.$brand;
         &.border-dark {
-            border-color: $overlay-blue-dark;
+            border-color: abstracts.$overlay-blue-dark;
         }
     }
 }
 
 .skill-section {
     // border: 3px solid yellow;
-    background: $overlay-blue-darkest;
-    color: $text-light;
-    border-bottom: .125rem solid $brand;
+    background: abstracts.$overlay-blue-darkest;
+    color: abstracts.$text-light;
+    border-bottom: .125rem solid abstracts.$brand;
 
     &:last-of-type {
         border-bottom: none;
@@ -132,13 +133,13 @@
         position: relative;
         isolation: isolate;
         height: 85vh;
-        background: linear-gradient(140deg, $overlay-blue-darkest 40%, transparent);
+        background: linear-gradient(140deg, abstracts.$overlay-blue-darkest 40%, transparent);
 
-        @include lg {
+        @include abstracts.lg {
             padding: 20vh 5vw 10vh;
             height: 90vh;
             height: 100vh;
-            background: linear-gradient(140deg, $overlay-blue-darker 20%, $overlay-blue-dark);
+            background: linear-gradient(140deg, abstracts.$overlay-blue-darker 20%, abstracts.$overlay-blue-dark);
 
             &::after {
                 content: '';
@@ -158,7 +159,7 @@
             text-transform: capitalize;
             line-height: 1.5;
             font-size: 1.5rem;
-            font-size: $font-clamp-md;
+            font-size: abstracts.$font-clamp-md;
             margin-bottom: 1rem;
         }
 
@@ -183,11 +184,11 @@
                 border: 2px solid red;
 
                 &::marker {
-                    color: $brand;
+                    color: abstracts.$brand;
                 }
                 border: 2px solid transparent;
-                border-right-color: $brand;
-                border-left-color: $brand;
+                border-right-color: abstracts.$brand;
+                border-left-color: abstracts.$brand;
                 text-transform: capitalize;
 
                 &:first-child {
@@ -206,7 +207,7 @@
             width: clamp(12rem, 10vw, 12rem);
             font-weight: 600;
             font-size: 1rem;
-            font-size: $font-clamp-sm;
+            font-size: abstracts.$font-clamp-sm;
 
         }
 
@@ -220,7 +221,7 @@
             z-index: -1;
             object-fit: cover;
 
-            @include lg {
+            @include abstracts.lg {
                 display: none;
             }
         }
@@ -234,7 +235,7 @@
                 opacity: .4;
             }
 
-            @include lg {
+            @include abstracts.lg {
                 height: 95vh;
 
                 &::after {
@@ -250,7 +251,7 @@
         }
 
         &.section-title-2 {
-            @include sm {
+            @include abstracts.sm {
                 height: 95vh;
             }
 
@@ -263,12 +264,12 @@
                 mix-blend-mode: overlay;
 
                 // opacity: .8;
-                @include sm {
+                @include abstracts.sm {
                     object-position: 50% 45%;
                 }
             }
 
-            @include lg {
+            @include abstracts.lg {
                 height: 100vh;
 
                 &::after {
@@ -295,13 +296,13 @@
                 mix-blend-mode: darken;
                 opacity: .5;
 
-                @include sm {
+                @include abstracts.sm {
                     object-position: 85% 25%;
                     opacity: .8;
                 }
             }
 
-            @include lg {
+            @include abstracts.lg {
                 // height: 90vh;
                 background: #ddd;
 
@@ -336,7 +337,7 @@
                 opacity: .5;
             }
 
-            @include lg {
+            @include abstracts.lg {
                 background: #fafafa;
 
                 &::after {
@@ -360,19 +361,19 @@
         display: grid;
         gap: 10vh;
 
-        @include md {
+        @include abstracts.md {
             grid-template-columns: 1fr 1fr;
             margin: 10vh 5vw;
         }
 
-        @include xlg {
+        @include abstracts.xlg {
             grid-template-columns: 1fr 1fr 1fr;
         }
 
         .skill-article {
             padding: 1rem;
             border-radius: .25rem;
-            background: $overlay-blue-dark;
+            background: abstracts.$overlay-blue-dark;
             box-shadow: 0 .5rem 1rem hsla(240, 100%, 5%, .1);
             transition: .25s;
             // border: 2px solid red;
@@ -409,10 +410,10 @@
                     font-size: .85rem;
                     font-size: clamp(.85rem, 1.5vw, 1rem);
                     list-style: none;
-                    border-bottom: 1px solid $overlay-blue-darkest;
+                    border-bottom: 1px solid abstracts.$overlay-blue-darkest;
 
                     &::marker {
-                        color: $overlay-blue-dark;
+                        color: abstracts.$overlay-blue-dark;
                         transition: .25s;
                     }
 
@@ -436,7 +437,7 @@
 
                 ul {
                     li {
-                        border-color: $overlay-blue-light;
+                        border-color: abstracts.$overlay-blue-light;
                         transition: .5s;
 
                         &::marker {
@@ -450,8 +451,8 @@
 
     &.light-section {
         background: #f4f4f4;
-        color: $overlay-blue-dark;
-        border-bottom: .125rem solid $overlay-blue-dark;
+        color: abstracts.$overlay-blue-dark;
+        border-bottom: .125rem solid abstracts.$overlay-blue-dark;
 
         &:last-of-type {
             border-bottom: none;
@@ -484,7 +485,7 @@
 
     &.darkest-section {
         background: #000;
-        color: $text-light;
+        color: abstracts.$text-light;
 
         &:last-of-type {
             border-bottom: none;
@@ -504,7 +505,7 @@
 
         .skill-section-content {
             .skill-article {
-                background: $overlay-blue-darker;
+                background: abstracts.$overlay-blue-darker;
             }
 
             ul {
@@ -524,7 +525,7 @@
             margin-bottom: 10vh;
             padding: 10vh 5vw 5vh;
 
-            @include md {
+            @include abstracts.md {
                 padding: 20vh 5vw 10vh;
             }
         }
