--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,8 +1,9 @@
-@forward './hero';
-@forward './header';
 @forward './about';
-@forward './skills';
-@forward './work';
-@forward './projects';
 @forward './contact';
 @forward './footer';
+@forward './design';
+@forward './header';
+@forward './hero';
+@forward './projects';
+@forward './skills';
+@forward './work';
