--- a/css/style.css
+++ b/css/style.css
@@ -14,19 +14,22 @@ html {
 body {
   color: #1f252d;
 }
-body img {
+
+img {
   display: block;
   max-width: 100%;
 }
-body a {
+
+a {
   text-decoration: none;
   transition: 0.25s;
 }
-body p {
-  line-height: 1.8;
-  font-weight: 400;
+
+p {
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.125rem);
+  font-weight: 400;
+  line-height: 1.8;
 }
 
 main {
