--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -1,2 +1,65 @@
-$main-bg: skyblue;
-$main-text: green;
+$brand: #b3c0cc;
+$brand-border: hsla(210, 19%, 75%, .5);
+
+$span-crimson: #dc143c;
+$span-gold: #ead2a1;
+$span-light: hsl(210, 19%, 75%);
+$light-span: #fff9;
+$span-brand: #f72751;
+$span-violet: violet;
+$span-blue: #0000ff;
+$span-crimson-dark: #dc143c8c;
+$span-orange: tomato;
+$border: #ead2a15e;
+$trans-border: rgba(255, 255, 255, 0.155);
+// link colors
+$link-gold: #ead2a1;
+$link-blue: skyblue;
+$link-crimson: hsl(348, 83%, 40%);
+$overlay-blue-darker:hsl(214, 18%, 15%);
+
+$dark-crimson:#b60f30;
+// background colors
+$background-light: #fff;
+$background-gray: #f4f4f4;
+$background-dark: #333;
+$background-light: #fff;
+$brand-overlay: #a6b2bf;
+
+$overlay: linear-gradient(-60deg, #29323c 0%, #485563 100%);
+$skill-item-overlay: linear-gradient(90deg, #29323c 0%, #485563 100%);
+$overlay: linear-gradient(0deg, #29323c 0%, #485563 100%);
+$overlay-dark: linear-gradient(0deg, #20262e 0%, #29323c 100%);
+$overlay-dark: linear-gradient(0deg, hsl(214, 18%, 15%) 30% , hsl(212, 19%, 25%) 70%);
+// $overlay-dark: linear-gradient(0deg, red 30% , green 70% );
+$overlay-btn: linear-gradient(0deg, #20262e, #485563 );
+$overlay-btn-hover: linear-gradient(0deg , #485563, #20262e );
+$overlay-blue-dark:hsl(212, 19%, 20%);
+$overlay-blue-dark-trans:rgba(34, 41, 49, 0.9);
+$overlay-blue-darker:hsl(214, 18%, 15%);
+$overlay-blue-darkest:hsl(213, 18%, 10%);
+$overlay-blue-black:hsl(213, 18%, 5%);
+$overlay-black:hsl(213, 18%, 1%);
+$overlay-blue-light: hsl(210, 16%, 33%);
+$nav-background: #29323c;
+$nav-active-background: #1b2127;
+$ul-background: #1f1e1e;
+$overlay-footer: linear-gradient(0deg, #20262e, #29323c);
+$overlay-footer: linear-gradient(0deg, #15191e, #20262e);
+$overlay-footer: linear-gradient(0deg, #000, #15191e);
+$skill-item-overlay: linear-gradient(90deg, $overlay-blue-darker 0%, $overlay-blue-dark 100%);
+
+// BUTTON COLORS
+$button-background-grey: #8584844b;
+$button-crimson: linear-gradient(0deg, #3f0d0d, #dc134c);
+$button-light: linear-gradient(0deg, #ddd, #f4f4f4);
+$button-light-hover: linear-gradient(0deg, #f4f4f4, #ddd);
+$button-crimson: linear-gradient(0deg, hsl(348, 83%, 25%), hsl(343, 84%, 47%));
+$button-crimson-hover: linear-gradient(0deg, #dc134c , #3f0d0d);
+$button-crimson-hover: linear-gradient(0deg, #dc134c , hsl(348, 83%, 25%));
+$button-gold: linear-gradient(0deg, hsl(40, 63%, 65%), #ead2a1);
+// form  
+$background-invalid: #f7cdd5c7;
+$text-invalid: #000;
+$background-valid: #cdf7d3c7;
+$text-valid: #000;
